// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type Foo = { x: number; }

=====================================output=====================================
export type Foo = { x: number };

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type Foo = { x: number; }

=====================================output=====================================
export type Foo = { x: number };

================================================================================
`;

exports[`qux.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import type { Foo } from './bar.js';
({ x: "" }: Foo);

=====================================output=====================================
import type { Foo } from "./bar.js";
({ x: "" }: Foo);

================================================================================
`;
